--- a/Stage_03/BlogdeGatos/style.css
+++ b/Stage_03/BlogdeGatos/style.css
@@ -87,8 +87,7 @@ main h1 {
   background-color: var(--color-base-blue-600);
   border: 0;
   padding: 1.4rem;
-  border-radius: 50%;
-  
+  border-radius: 50%;  
 }
 
 .input-wrapper label {
@@ -139,7 +138,7 @@ footer p{
   display: grid;
   gap: 2.2rem;
 
-  margin: 3.4rem 0 1.7rem 0;
+  margin: 3rem 0 1.7rem 0;
 }
 
 .box {
@@ -170,20 +169,19 @@ footer p{
 .details h2 {
   color: var(--color-base-gray-900);
   font-weight: 700;
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 
 .details p {
   color: var(--color-base-black);
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 400;
-  margin-top: 1.5rem;
+  margin-top: 1rem;
 }
-
 
 /* Media */
 
-@media (min-width: 1024px) {
+@media (min-width: 1220px) {
   body {
     min-height: 100vh;
   }
@@ -203,14 +201,12 @@ footer p{
   .container {
     padding: 3rem 10rem;
     display: grid;
-    grid-template:
-    "A" 70%
-    "B" 30% / 60% 2fr;
+    grid-template: 100% / 65% 1fr;
   }
 
   #text {
     color: var(--color-base-black);
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 400;
     margin: 0;
   }
@@ -230,14 +226,13 @@ footer p{
 
   .box {
     display: grid;
-    grid-template:
-    "A" 100%
-    "B" 30% / 40% 1fr;
+    grid-template: 100% / 40% 1fr;
   }
  
   .input-wrapper input {
     padding: 1.2rem;
   }
+
   main {
     flex-direction: row;
     max-width: 100%;
